# rustims

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  ACQUISITION_SCHEME_IMPL.codex-review.md  ACQUISITION_SCHEME_PLAN.codex-review-v2.md  ACQUISITION_SCHEME_PLAN.codex-review.md  ACQUISITION_SCHEME_PLAN.md  BRUKER_INFO.codex-review.md  CHEM_PARITY.md  CLAUDE.md  CODE_CLEANUP_PLAN.md  Cargo.toml  DL_EXTRACTION.md  Dockerfile  ECOSYSTEM_SPLIT.md  EXTRACTORS.codex-review.md  INSTRUMENT_DISPATCH.md  LICENSE  LSH_HANDOFF.md  MIGRATION.codex-review.md  MIGRATION_PLAN.md  MS_IO_CUTOVER.md  NEXT_STEPS.md  PACKAGE_SPLIT_PLAN.md  PYO3.codex-review.md  README.md  RELEASING.md  SIGNING.md  TIMSIM_CORE.md  TO_BRUKER.codex-review.md  TO_BRUKER_V2.codex-review.md  TO_LSH_SCAN_INDEX.md  genindex.html  index.html
imspy/: .buildinfo  CLAUDE.md  INTENSITY_PREDICTION.md  README.md  genindex.html  imspy.algorithm.ccs.html  imspy.algorithm.html  imspy.algorithm.intensity.html  imspy.algorithm.ionization.html  imspy.algorithm.pretrained.html  imspy.algorithm.rt.html  imspy.chemistry.html  imspy.data.html  imspy.html  imspy.simulation.html  imspy.simulation.timsim.html  imspy.simulation.timsim.jobs.html  imspy.timstof.dbsearch.html  imspy.timstof.html  imspy.utility.html  imspy.vis.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
imspy/.doctrees/: environment.pickle  imspy.algorithm.ccs.doctree  imspy.algorithm.doctree  imspy.algorithm.intensity.doctree  imspy.algorithm.ionization.doctree  imspy.algorithm.pretrained.doctree  imspy.algorithm.rt.doctree  imspy.chemistry.doctree  imspy.data.doctree  imspy.doctree  imspy.simulation.doctree  imspy.simulation.timsim.doctree  imspy.simulation.timsim.jobs.doctree  imspy.timstof.dbsearch.doctree  imspy.timstof.doctree  imspy.utility.doctree  imspy.vis.doctree  index.doctree  modules.doctree
imspy/_sources/: imspy.data.rst.txt  index.rst.txt
imspy/docs/: SIMULATION_ROADMAP.md
imspy/docs/source/: conf.py  index.rst
imspy/examples/: CCS.ipynb  bayesian_rescoring.ipynb  imspy_dda.ipynb  timsimDDA.ipynb  timsimDIA.ipynb
imspy/examples/simulation/: dia_simulation.py  dia_simulation_steps.py  (+3 more)
imspy/imspy/: __init__.py  core.py  data.py  dda.py  dia.py  feature.py  frame.py  handle.py  isotopes.py  mixture.py  noise.py  proteome.py  slice.py  spectrum.py  utility.py
imspy/tests/: conftest.py  test_batch_preprocessing.py  test_chemistry.py  test_hyperscore_equality.py  test_peptide.py  test_s_curve.py  test_sage_integration.py  test_sage_intensity_interface.py  test_sage_interface.py  test_spectrum.py  test_tims_frame.py  test_weighted_dda_integration.py
imspy_connector/: Cargo.toml  pyproject.toml
imspy_connector/src/: lib.rs  py_acquisition.rs  py_amino_acids.rs  py_annotation.rs  py_chemistry.rs  py_cluster.rs  py_constants.rs  py_dataset.rs  py_dda.rs  py_dia.rs  py_elements.rs  py_feature.rs  py_ml_utility.rs  py_mz_spectrum.rs  py_peptide.rs  py_pseudo.rs  py_quadrupole.rs  py_sequence.rs  py_simulation.rs  py_spectrum_processing.rs  py_sumformula.rs  py_tdf_inmem.rs  py_tims_frame.rs  py_tims_slice.rs  py_timstof_dda.rs  py_unimod.rs  py_utility.rs
ms-chem/: Cargo.toml
ms-chem/src/: elements.rs  formula.rs  fragment.rs  isotope.rs  lib.rs  mass.rs  modification.rs  residue.rs  unimod.rs
ms-chem/tests/: parity.rs
mscore/: Cargo.toml
mscore/examples/: lsh_recall_spike.rs
mscore/src/: chemistry.rs  lib.rs  main.rs  mz_spectrum.rs  quadrupole.rs  tims_frame.rs  tims_slice.rs  timstof_dda.rs
mscore/tests/: chem_parity.rs
pyims/: Cargo.toml  pyproject.toml
pyims/pyims/: data.py  frame.py  handle.py  mixture.py  slice.py  spectrum.py  utilities.py
pyims/src/: py_mz_spectrum.rs  pyhandle.rs
pyims_connector/: Cargo.toml  pyproject.toml
pyims_connector/src/: lib.rs  py_handle.rs  py_mz_spectrum.rs  py_tims_frame.rs  py_tims_slice.rs  pyhandle.rs
rustdf/: BRUKER_TRANSLATORS.md  Cargo.toml
rustdf/examples/: compare_all_converters.rs  compare_calibration.rs  dataset_similarity.rs  dda_spike.rs  dump_bruker_centroids.rs  mbr_crossrun.rs  recurrence_recall.rs  recurrence_selftest.rs  sciex_author.rs  thermo_m0_survival.rs  thermo_m1_seam.rs
rustdf/src/: lib.rs  main.rs
rustms-connector/: Cargo.toml  pyroject.toml
rustms-connector/src/: lib.rs  py_amino_acid.rs  py_amino_acids.rs  py_chemistry.rs  py_constants.rs  py_elements.rs  py_mz_spectrum.rs  py_peptide.rs  py_sumformula.rs  py_unimod.rs
sciex-io/: Cargo.toml
sciex-io/src/: lib.rs
tims-viewer/: CLUSTERING_WEB_PLAN.md  Cargo.toml  DIA_WINDOWS_WEB_PLAN.md  FLOW_PLAN.md  FOCUS_LENS_PLAN.md  NATIVE_WEB.md  NEXT_GUI_STEPS.md  NEXT_VIEWER_STEPS.md  PERF_PLAN.md  PERF_PLAN_TIER2.md  QUAD_FILTER_IDEA.md  RUN.txt  VOLUME_WEB_IDEA.md  acquisition_service.py  cluster_service.py
tims-viewer/src/: app.rs  camera.rs  cluster.rs  lib.rs  main.rs  offscreen.rs  serve.rs  state.rs  ticks.rs  ui.rs
tims-viewer/web/: Cargo.toml  index.html
timsim-chem/: Cargo.toml
timsim-chem/examples/: digest_report.rs  sweeps.rs  universe.rs
timsim-chem/src/: design.rs  digest.rs  enzyme.rs  fasta.rs  fragment.rs  ids.rs  ionize.rs  isotope.rs  lib.rs  mass.rs  modify.rs
timsim-chem/xcheck/: Cargo.toml  README.md
timsim-cli/: CALIBRATION_PLAN.md  CALIBRATION_SAMPLE_REQUEST.md  Cargo.toml  DDA_PLAN.md  NECROFLOW_WIRING.md  RENDER_CALIBRATION.md  SCIEX_CONSOLIDATION.md  THERMO_M3_LOW_IDS.md  THERMO_PLAN.md  THERMO_WRITER_PORT.md
timsim-cli/src/: dda.rs  dia.rs  lib.rs  ms2.rs  render.rs  sequences.rs  spec.rs  spectrum.rs
timsim-cli/tests/: digest_integrity.rs
timsim-core/: Cargo.toml
timsim-core/examples/: thermo_m0_survival.rs  thermo_m1_seam.rs
timsim-core/src/: acquisition.rs  astral_dispatch.rs  containers.rs  dda.rs  dia.rs  handle.rs  lazy_builder.rs  lib.rs  mzml.rs  precursor.rs  projector.rs  scheme.rs
timsim-schema/: Cargo.toml
timsim-schema/examples/: gru.rs
timsim-schema/src/: lib.rs  tables.rs
timsim-schema/tests/: conformance.rs
timsim-types/: Cargo.toml
timsim-types/src/: lib.rs
(+6193 files in other folders)
