[workspace]
members = [
    "sciex-io",
    "timsim-cli",
    "imspy_connector",
    "imsjl_connector",
    "tims-viewer",
    "tims-viewer/web"
]
# timsim-types / timsim-schema / timsim-chem / timsim-core moved to the sibling `timsim` family repo
# (github.com/theGreatHerrLebert/timsim); consumers here dep them by path (../../../timsim/timsim-*).

resolver = "2"

[profile.release]
debug = true
overflow-checks = true
lto = "thin"
panic = "abort"

# R2 cutover: ms-chem + mscore now live in github.com/theGreatHerrLebert/mscore and are
# published on crates.io. For local dev, patch them back to the sibling foundation checkout.
[patch.crates-io]
ms-chem = { path = "../../mscore/ms-chem" }
mscore = { path = "../../mscore/mscore" }
# ms-io 0.2.0 is unpublished during the R4 bootstrap, so every consumer deps it by direct path
# (not version+patch). Re-add here once ms-io 0.2.0 is published (stage 3) and flip consumers to `= "0.2"`.
