[workspace]
members = [
    "sciex-io",
    "timsim-cli",
    "imspy_connector",
    "imsjl_connector",
    "tims-viewer",
    "tims-viewer/web"
]
# timsim-types / timsim-schema / timsim-chem / timsim-core moved to the sibling `timsim` family repo
# (github.com/theGreatHerrLebert/timsim); consumers here dep them by path (../../../timsim/timsim-*).

resolver = "2"

[profile.release]
debug = true
overflow-checks = true
lto = "thin"
panic = "abort"

# R2 cutover: ms-chem + mscore now live in github.com/theGreatHerrLebert/mscore and are
# published on crates.io. For local dev, patch them back to the sibling foundation checkout.
[patch.crates-io]
# Foundation (github.com/theGreatHerrLebert/mscore) — published; patched to the sibling checkout for dev.
ms-chem = { path = "../../mscore/ms-chem" }
mscore = { path = "../../mscore/mscore" }
ms-io = { path = "../../mscore/ms-io" }
# timsim family (github.com/theGreatHerrLebert/timsim) — published; patched to the sibling checkout for dev.
timsim-types = { path = "../../timsim/timsim-types" }
timsim-schema = { path = "../../timsim/timsim-schema" }
timsim-chem = { path = "../../timsim/timsim-chem" }
timsim-core = { path = "../../timsim/timsim-core" }
