[tool.poetry]
name = "imspy"
version = "0.2.34"
description = ""
authors = ["theGreatHerrLebert <davidteschner@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = ">=2.1"
numpy = ">=1.21"
numba = ">=0.53"
zstd = ">=1.5.0"
tabulate = ">=0.9.0"

tensorflow = "2.15.0.post1"
#tensorflow = "2.15.0"
tensorflow-probability = ">=0.22.1"
wandb = ">=0.12.1"

pyopenms = ">=2.6.0"
mokapot = ">=0.10.0"

sagepy = ">=0.2.23"
imspy-connector = ">=0.2.34"

scipy = ">=1.7.1"
tqdm = ">=4.66"
pyarrow =">=13.0"
mendeleev = ">=0.7.0"
dlomix = ">=0.0.6"
toml = ">=0.10.2"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.0"

myst-parser = "^4.0.0"
sphinx-autodoc-typehints = "^2.5.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
imspy_dda = "imspy.timstof.dbsearch.imspy_dda:main"
timsim = "imspy.simulation.timsim.simulator:main"
imspy_rescore_sage = "imspy.timstof.dbsearch.imspy_rescore_sage:main"
