[project]
name = "imspy"
version = "0.3.20"
description = "A Python package for analyzing timsTOF ion mobility spectrometry data, including tools for raw data acccess and simulation."
authors = [
    { name = "theGreatHerrLebert", email = "davidteschner@googlemail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "pandas>=2.1",
    "numpy>=1.21",
    "numba>=0.53",
    "zstd>=1.5.6.1",
    "tabulate>=0.9.0",
    "tensorflow==2.15.*",
    "tensorflow-probability>=0.22.1",
    "wandb>=0.12.1",
    "mokapot>=0.10.0",
    "sagepy>=0.3.12",
    "imspy-connector>=0.3.19",
    "scipy>=1.7.1",
    "tqdm>=4.66",
    "pyarrow>=13.0",
    "mendeleev>=0.7.0",
    "dlomix>=0.0.6",
    "toml>=0.10.2",
    "koinapy>=0.0.10",
    "poetry (>=2.0.0,<3.0.0)",
    "pyopenms (>=3.2.0,<4.0.0)",
    "qdarkstyle >=3.2.3",
    "pyqt5 >=5.15.11",
    "vtk >=9.5.0",
]

[project.optional-dependencies]
gui = [
    "pyqt5>=5.15.11",
    "qdarkstyle>=3.2.3",
    "vtk>=9.4.0"
]

[project.scripts]
imspy_dda = "imspy.timstof.dbsearch.imspy_dda:main"
imspy_ccs = "imspy.timstof.dbsearch.imspy_ccs:main"
timsim = "imspy.simulation.timsim.simulator:main"
timsim_gui = "imspy.simulation.timsim.timsim_gui:main"
imspy_rescore_sage = "imspy.timstof.dbsearch.imspy_rescore_sage:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.0"
myst-parser = "^4.0.0"
sphinx-autodoc-typehints = "^2.5.0"
