[package]
name = "imspy-connector"
version = "0.4.1"
edition = "2021"

[lib]
name = "imspy_connector"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
numpy = "0.23.0"
mscore = { path = "../mscore", version = "0.4.1" }
rustdf = { path = "../rustdf", version = "0.4.1" }
serde = "1.0.219"
serde_json = "1.0.140"
rayon = "1.10.0"
regex = "1.11.1"
rustc-hash = "2.1.0"
