[package]
name = "imspy-connector"
version = "0.4.1"
edition = "2021"
rust-version = "1.84"

[lib]
name = "imspy_connector"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module"] }
numpy = "0.29.0"
mscore = { version = "0.5.0" }
ms-io = { path = "../../../mscore/ms-io" }
sciex-io = { path = "../sciex-io", optional = true }
serde = "1.0.219"
serde_json = "1.0.140"
rayon = "1.10.0"
regex = "1.11.1"
rustc-hash = "2.1.0"

[features]
# Forward the vendor extractors to ms-io (sciex -> sciex-io) (each needs its private repo at build
# time). Off by default: the core connector + Bruker scheme path stay unaffected.
thermo = ["ms-io/thermo"]
sciex = ["dep:sciex-io"]
# Open mzML output writer (mzdata); no private repo needed.
mzml = ["ms-io/mzml"]
