[package]
name = "imspy-connector"
version = "0.4.1"
edition = "2021"
rust-version = "1.84"

[lib]
name = "imspy_connector"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module"] }
numpy = "0.29.0"
mscore = { version = "0.5.0" }
# ms-io for the Bruker TDF data/cluster APIs; timsim-core for the v2 sim engine (projector, writers,
# scheme adapters). ms-io is a direct path dep during the R4 bootstrap (0.2.0 not yet published).
ms-io = "0.2.0"
timsim-core = "0.1.0"
sciex-io = { path = "../sciex-io", optional = true }
serde = "1.0.219"
serde_json = "1.0.140"
rayon = "1.10.0"
regex = "1.11.1"
rustc-hash = "2.1.0"

[features]
# Forward the vendor extractors to timsim-core (the engine owns the thermo/mzml writers now; sciex ->
# sciex-io). Off by default: the core connector + Bruker scheme path stay unaffected.
thermo = ["timsim-core/thermo"]
sciex = ["dep:sciex-io"]
# Open mzML output writer (mzdata); no private repo needed.
mzml = ["timsim-core/mzml"]
