[tool.poetry]
name = "pyims"
version = "0.1.0"
description = ""
authors = ["theGreatHerrLebert <davidteschner@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pandas = ">=2.1"
numpy = ">=1.21"
pysqlite3 = ">=0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
