[tool.poetry]
name = "pyims"
version = "0.1.0"
description = ""
authors = ["theGreatHerrLebert <davidteschner@googlemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = ">=2.1"
numpy = ">=1.21"
tensorflow = ">=2.14"
tensorflow-probability = ">=0.22.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
