[package]
name = "rustdf"
version = "0.3.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[profile.release]
debug = true

[dependencies]
clap = { version = "4.5.24", features = ["derive"] }
libloading = "0.8.6"
rusqlite = { version = "0.32.1", features = ["bundled"] }
lzf = "1.0.0"
zstd = "0.13.2"
byteorder = "1.5.0"
mscore = {path = "../mscore"}
rayon = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
rand = "0.8.5"
