[package]
name = "rustdf"
version = "0.3.5"
edition = "2021"
authors = ["David Teschner <davidteschner@googlemail.com>"] # Add your name and email
description = "A Rust library for interacting with Bruker TDF formatted Raw Data."
license = "MIT" 
repository = "https://github.com/theGreatHerrLebert/rustims" 
documentation = "https://docs.rs/rustdf" 
readme = "README.md" 
keywords = ["dataframe", "sql", "compression", "parallel"]
categories = ["data-structures", "science"]
rust-version = "1.84"

[lib]
path = "src/lib.rs"

[dependencies]
# Command-line argument parsing
clap = { version = "4.5.47", features = ["derive"] }
# Dynamic library loading
libloading = "0.8.6"
# SQLite with bundled binaries
rusqlite = { version = "0.32.1", features = ["bundled"] }
# Compression libraries
lzf = "1.0.0"
zstd = "0.13.3"
# Byte order utilities
byteorder = "1.5.0"
# Core library for computational proteomics
# mscore = { version = "0.3.3" }
mscore = { path = "../mscore" }
# Parallelism
rayon = "1.10.0"
# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
# Random number generation
rand = "0.8.5"
rustc-hash = "2.1.0"

[profile.release]
debug = true
overflow-checks = true
lto = "thin" 
panic = "abort" 

[package.metadata.docs.rs]
features = ["all"] 
