[package]
name = "rustdf"
version = "0.4.1"
edition = "2021"
authors = ["David Teschner <davidteschner@googlemail.com>"] # Add your name and email
description = "A Rust library for interacting with Bruker TDF formatted Raw Data."
license = "MIT" 
repository = "https://github.com/theGreatHerrLebert/rustims" 
documentation = "https://docs.rs/rustdf" 
readme = "README.md" 
keywords = ["dataframe", "sql", "compression", "parallel"]
categories = ["data-structures", "science"]
rust-version = "1.84"

[lib]
path = "src/lib.rs"

[dependencies]
# Command-line argument parsing
clap = { version = "4.5.32", features = ["derive"] }
# Dynamic library loading
libloading = "0.8.6"
# SQLite with bundled binaries
rusqlite = { version = "0.32.1", features = ["bundled"] }
# Compression libraries
lzf = "1.0.0"
zstd = "0.13.3"
# Byte order utilities
byteorder = "1.5.0"
# Core library for computational proteomics
mscore = { path = "../mscore", version = "0.4.1" }
# Parallelism
rayon = "1.10.0"
# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
# Random number generation
rand = "0.8.5"
rustc-hash = "2.1.0"
bincode = "1.3.3"
polars = { version = "0.43.1", features = ["ndarray", "parquet", "dtype-u8"] }
# Thermo .raw writer (public repo; only built with the `thermo` feature)
# Local working branch (feat/profile-authoring-drop-and-account, on top of the pinned 9e908ba) while the
# profile-authoring port is in progress. Revert to the git rev once the changes land upstream.
thermorawfile = { path = "/scratch/timsim-demo/thermorawfile-patched", optional = true }
# SCIEX .wiff method reader (public repo; only built with the `sciex` feature)
sciexwiff = { git = "https://github.com/theGreatHerrLebert/sciexwiff", rev = "ef7c0cd7e59d3b51160e446cbe3af240d230668d", optional = true }
# Open mzML writer (Joshua Klein's mzdata); only built with the `mzml` feature. The
# vendor-neutral output path: render -> mzML (readable by DiaNN/alphaDIA, mzprov-signable).
# Used for SCIEX, whose proprietary .wiff.scan spectra are not authored.
mzdata = { version = "0.63", optional = true }

[features]
# Off by default: enable the Thermo .raw / SCIEX .wiff extractors + writers, or the
# open mzML writer. Each vendor extractor needs build-time access to its private repo.
thermo = ["dep:thermorawfile"]
sciex = ["dep:sciexwiff"]
mzml = ["dep:mzdata"]

[package.metadata.docs.rs]
features = ["all"]
