[package]
name = "rustms-connector"
version = "0.2.17"
edition = "2021"

[lib]
name = "rustms_connector"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module", "gil-refs"] }
numpy = "0.21.0"
serde = "1.0.198"
serde_json = "1.0.116"
ndarray = "0.15.6"
rustms = {path = "../rustms"}
