[package]
name = "rustms-connector"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustms_connector"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.1", features = ["extension-module", "gil-refs"] }
numpy = "0.21.0"
rustms = { path = "../rustms" }
serde = "1.0.197"
serde_json = "1.0.115"
ndarray = "0.15.6"
