[package]
name = "timsim-chem"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"
license = "MIT"
description = "Chemistry core for timsim v2: FASTA, enzymes, and the analytic (quantitative) digest."

[dependencies]
regex = "1.11"
rayon = "1.10"

[dev-dependencies]
# R1 cross-impl parity gate (relocated here — all 3 impls reachable)
ms-chem = "0.1.0"
mscore = "0.5.0"
approx = "0.5"
