[package]
name = "timsim-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "The timsim v2 protocol tools: proteome, digest, design, yield."

# Separate binaries, not `timsim <verb>`. Necroflow's cache identity can hash the binary, so
# one binary per tool means changing the renderer does not invalidate your digest.
[[bin]]
name = "timsim-proteome"
path = "src/bin/proteome.rs"

[[bin]]
name = "timsim-digest"
path = "src/bin/digest.rs"

[[bin]]
name = "timsim-design"
path = "src/bin/design.rs"

[[bin]]
name = "timsim-precursors"
path = "src/bin/precursors.rs"

[[bin]]
name = "timsim-yield"
path = "src/bin/yield.rs"

[dependencies]
timsim-chem = { path = "../timsim-chem" }
timsim-schema = { path = "../timsim-schema" }
arrow = "56"
parquet = "56"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
rayon = "1.10"
# The real Bruker TDF machinery: the per-frame block encoder (for the throughput bench) and the
# `.d` writer + index converters (for `timsim-render`). Optional so the other lightweight tools don't
# pull rustdf (polars + bundled SQLite).
rustdf = { path = "../rustdf", optional = true }
# The peptide-ion spectrum machinery (precursor + fragment isotopic spectra) the render uses. Optional,
# alongside rustdf, so the lightweight tools don't pull it.
mscore = { path = "../mscore", optional = true }

[features]
# Enables everything that touches the real TDF format + spectrum generation — the encode path in the
# throughput bench, the `timsim-render` .d writer, and the mscore peptide-ion spectra:
#   cargo build --release -p timsim-cli --features tdf
tdf = ["dep:rustdf", "dep:mscore"]

[[bin]]
name = "timsim-modify"
path = "src/bin/modify.rs"

[[bin]]
name = "timsim-localization"
path = "src/bin/localization.rs"

[[bin]]
name = "timsim-render-bench"
path = "src/bin/render_bench.rs"

# The MS1 .d renderer: feature space -> streaming render -> real Bruker .d. Needs the tdf feature.
[[bin]]
name = "timsim-render"
path = "src/bin/render.rs"
required-features = ["tdf"]

# Instrument-independent MS1+MS2 spectrum materialisation (mscore). Needs the tdf feature (mscore).
[[bin]]
name = "timsim-spectra"
path = "src/bin/spectra.rs"
required-features = ["tdf"]
