[package]
name = "timsim-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "The timsim v2 protocol tools: proteome, digest, design, yield."

# Separate binaries, not `timsim <verb>`. Necroflow's cache identity can hash the binary, so
# one binary per tool means changing the renderer does not invalidate your digest.
[[bin]]
name = "timsim-proteome"
path = "src/bin/proteome.rs"

[[bin]]
name = "timsim-digest"
path = "src/bin/digest.rs"

[[bin]]
name = "timsim-design"
path = "src/bin/design.rs"

[[bin]]
name = "timsim-precursors"
path = "src/bin/precursors.rs"

[[bin]]
name = "timsim-yield"
path = "src/bin/yield.rs"

[dependencies]
timsim-chem = { path = "../../../timsim/timsim-chem" }
timsim-schema = { path = "../../../timsim/timsim-schema" }
arrow = "56"
parquet = "56"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
rayon = "1.10"
# The real Bruker TDF machinery: the per-frame block encoder (for the throughput bench) and the
# `.d` writer + index converters (for `timsim-render`). Optional so the other lightweight tools don't
# pull ms-io (polars + bundled SQLite). Direct path during R4 bootstrap (0.2.0 not yet published).
ms-io = { path = "../../../mscore/ms-io", optional = true }
# The v2 sim engine — only the Thermo `.raw` writer seam (render_thermo bin) uses it. Optional.
timsim-core = { path = "../../../timsim/timsim-core", optional = true }
# The peptide-ion spectrum machinery (precursor + fragment isotopic spectra) the render uses. Optional,
# alongside ms-io, so the lightweight tools don't pull it.
mscore = { version = "0.5.0", optional = true }

[features]
# Enables everything that touches the real TDF format + spectrum generation — the encode path in the
# throughput bench, the `timsim-render` .d writer, and the mscore peptide-ion spectra:
#   cargo build --release -p timsim-cli --features tdf
tdf = ["dep:ms-io", "dep:mscore"]
# The Thermo Astral `.raw` render driver (timsim-render-thermo): pulls timsim-core's thermo feature (the
# thermorawfile-backed writer seam). Off by default so default builds don't pull the thermo dep.
#   cargo build --release -p timsim-cli --features thermo
thermo = ["dep:ms-io", "dep:timsim-core", "timsim-core/thermo", "dep:mscore"]

[[bin]]
name = "timsim-modify"
path = "src/bin/modify.rs"

# Freeze the fragment-prediction input (precursor_id, [UNIMOD]-annotated sequence, charge) as an explicit
# artifact — reuses the same annotate() the spectrum builder uses, so intensities and m/z agree.
[[bin]]
name = "timsim-frag-input"
path = "src/bin/frag_input.rs"

[[bin]]
name = "timsim-localization"
path = "src/bin/localization.rs"

[[bin]]
name = "timsim-render-bench"
path = "src/bin/render_bench.rs"

# The MS1 .d renderer: feature space -> streaming render -> real Bruker .d. Needs the tdf feature.
[[bin]]
name = "timsim-render"
path = "src/bin/render.rs"
required-features = ["tdf"]

[[bin]]
name = "timsim-render-thermo"
path = "src/bin/render_thermo.rs"
required-features = ["thermo"]

# Instrument-independent MS1+MS2 spectrum materialisation (mscore). Needs the tdf feature (mscore).
[[bin]]
name = "timsim-spectra"
path = "src/bin/spectra.rs"
required-features = ["tdf"]
