[package]
name = "timsim-schema"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "The schema contract for timsim v2. One definition of every column, read by Rust and Python alike."

[dependencies]
arrow = "56"
parquet = "56"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
parquet = "56"
