[package]
name = "timsim-types"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"
license = "MIT"
description = "Zero-dependency contract types for timsim v2: the DIA acquisition scheme (AcquisitionScheme + events, windows, activation/CE policy). The smallest shared vocabulary the extractors and engine agree on."
repository = "https://github.com/theGreatHerrLebert/mscore"

[dependencies]
# Intentionally none — this is a pure-std leaf so any consumer (incl. sciex-io) can name a scheme
# without pulling ms-io/Arrow/Parquet. Keep it that way.
