# Deliberately its OWN workspace: sage-core is an entire search engine, and it has no place
# in the build graph of timsim-chem. This is a validation harness, run on demand.
[package]
name = "timsim-xcheck"
version = "0.1.0"
edition = "2021"

[dependencies]
sage-core = { git = "https://github.com/theGreatHerrLebert/sage.git" }
timsim-chem = { path = ".." }

[workspace]
